# RustySecrets

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  aliases.js  build.rs  install_protobuf.sh  search-index.js
benches/: shared.rs  ss1.rs  sss.rs  t2.rs  thss.rs  wrapped_secrets.rs
benches/resources/: 1KB.txt
docs/: search-index.js
docs/rusty_secrets/: fn.generate_shares.html  fn.recover_secret.html  index.html  sidebar-items.js  struct.RustyError.html
docs/rusty_secrets/custom_error/: RustyError.t.html  fn.other_io_err.html  fn.pie2io.html  index.html  other_io_err.v.html  pie2io.v.html  sidebar-items.js  struct.Error.html  struct.RustyError.html
docs/rusty_secrets/share_data/: ShareData.t.html  file_descriptor_proto.v.html  fn.file_descriptor_proto.html  index.html  sidebar-items.js  struct.ShareData.html
docs/rusty_secrets/sss/: fn.generate_shares.html  fn.recover_secret.html  index.html  sidebar-items.js
docs/rusty_secrets/wrapped_secrets/: fn.generate_shares.html  (+4 more)
examples/: cli.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ss1_1.rs  sss_1.rs  t2_1.rs  thss_1.rs  wrapped_secrets_1.rs
implementors/error_chain/: trait.ChainedError.js
protobuf/: Makefile  Secret.proto  ShareData.proto  version.proto
protobuf/dss/: metadata.proto  secret.proto  share.proto
protobuf/sss/: secret.proto  share.proto
protobuf/wrapped/: secret.proto  share.proto
rusty_secrets/: all.html  index.html  sidebar-items.js
rusty_secrets/errors/: enum.ErrorKind.html  index.html  struct.Error.html  trait.ResultExt.html  type.Result.html
rusty_secrets/proto/: VersionProto.t.html  enum.VersionProto.html  index.html  sidebar-items.js
rusty_secrets/sss/: fn.recover_secret.html  fn.split_secret.html  fn.split_secret_rng.html  index.html  sidebar-items.js  split_secret.v.html  split_secret_rng.v.html
rusty_secrets/wrapped_secrets/: fn.recover_secret.html  fn.split_secret.html  fn.split_secret_rng.html  index.html  sidebar-items.js
src/: ShareDataMod.rs  custom_error.rs  dss.rs  error.rs  errors.rs  gf256.rs  interpolation.rs  lagrange.rs  lib.rs  main.rs  poly.rs  share_format.rs  sss.rs  validation.rs  vol_hash.rs  wrapped_secrets.rs
src/dss/: errors.rs  format.rs  metadata.rs  mod.rs  random.rs  t2.rs  thss.rs  utils.rs
src/lib/: custom_error.rs  gf256.rs  mod.rs
src/proto/: mod.rs  secret.rs  share_data.rs  version.rs
src/rusty_secrets/: errors.rs.html  gf256.rs.html  lagrange.rs.html  lib.rs.html  poly.rs.html  vol_hash.rs.html
src/share/: format.rs  metadata.rs  mod.rs  validation.rs
src/sss/: encode.rs  format.rs  math.rs  mod.rs  scheme.rs  share.rs
src/tests/: mod.rs  test_vectors.rs
src/util/: mod.rs  void.rs
src/wrapped_secrets/: mod.rs  scheme.rs
tests/: generation_errors.rs  lib.rs  mod.rs  randomized_tests.rs  recovery-errors.rs  recovery_errors.rs  ss1_recovery_errors.rs  test_vectors.rs  thss_generation_errors.rs  thss_recovery_errors.rs
tests/dss/: mod.rs
tests/sss/: generation_errors.rs  mod.rs  randomized_tests.rs  recovery_errors.rs  test_vectors.rs
(+110 files in other folders)
