[package]
name = "rusty_secrets"
version = "0.0.3"
authors = ["Frederic Jacobs <github@fredericjacobs.com>", "sellibitze"]
description = "Implementation of threshold Shamir's secret sharing in the Rust programming language."
homepage = "https://github.com/freedomofpress/RustySecrets"
license = "BSD-3-Clause"
readme = "README.md"
build = "build.rs"

[dependencies]
rustc-serialize = "^0.3.24"
rand = "^0.3.16"
ring = "^0.12.1"
merkle_sigs = "^1.4.0"
protobuf = "^1.4.1"

